Fix background execution